fix: load js + contact fields + whatsapp ar format + valid sitemap

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta property="og:description" content="Servicios de ingeniería y mantenimiento para industria y obras.">
   <meta property="og:url" content="https://marcoluna-nqn.github.io/luna-ing/">
   <meta property="og:image" content="https://marcoluna-nqn.github.io/luna-ing/assets/img/source_winlab/og.png">
-  <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg">
+  <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
   <a class="skip-link" href="#inicio">Saltar al contenido</a>
@@ -40,8 +40,8 @@
         <h1>Servicios de ingeniería y mantenimiento para industria y obras</h1>
         <p class="subtitle">Protección catódica, puesta a tierra e instalaciones eléctricas con foco en seguridad, trazabilidad y cumplimiento técnico.</p>
         <div class="hero-actions">
-          <a id="cta-whatsapp" class="btn btn-primary" href="#" target="_blank" rel="noopener">Pedir presupuesto</a>
-          <a id="cta-email" class="btn btn-secondary" href="#">Enviar email</a>
+          <a id="cta-whatsapp" class="btn btn-primary" href="https://wa.me/5492996209136?text=Hola%20Luna%20Ing%2C%20quiero%20pedir%20un%20presupuesto." target="_blank" rel="noopener">Pedir presupuesto</a>
+          <a id="cta-email" class="btn btn-secondary" href="mailto:marcoantoniolunavillegas@gmail.com">Enviar email</a>
         </div>
       </div>
       <div class="hero-ambient" aria-hidden="true">
@@ -141,12 +141,12 @@
       <div class="grid contact-layout">
         <article class="card contact-card">
           <h3>Canales directos</h3>
-          <p><strong>Ubicación:</strong> <span id="contact-location"></span></p>
-          <p><strong>WhatsApp:</strong> <a id="contact-whatsapp-text" href="#"></a></p>
-          <p><strong>Email:</strong> <a id="contact-email-text" href="#"></a></p>
+          <p><strong>Ubicación:</strong> <span id="contact-location">Neuquén, Argentina</span></p>
+          <p><strong>WhatsApp:</strong> <a id="contact-whatsapp-text" href="https://wa.me/5492996209136?text=Hola%20Luna%20Ing%2C%20quiero%20pedir%20un%20presupuesto.">+54 299 620 9136</a></p>
+          <p><strong>Email:</strong> <a id="contact-email-text" href="mailto:marcoantoniolunavillegas@gmail.com">marcoantoniolunavillegas@gmail.com</a></p>
           <div class="hero-actions">
-            <a id="contact-whatsapp-btn" class="btn btn-primary" href="#" target="_blank" rel="noopener">Escribir por WhatsApp</a>
-            <a id="contact-email-btn" class="btn btn-secondary" href="#">Enviar email</a>
+            <a id="contact-whatsapp-btn" class="btn btn-primary" href="https://wa.me/5492996209136?text=Hola%20Luna%20Ing%2C%20quiero%20pedir%20un%20presupuesto." target="_blank" rel="noopener">Escribir por WhatsApp</a>
+            <a id="contact-email-btn" class="btn btn-secondary" href="mailto:marcoantoniolunavillegas@gmail.com">Enviar email</a>
           </div>
         </article>
         <article class="card">
@@ -172,6 +172,6 @@
     </div>
   </footer>
 
-  <script defer src="assets/js/main.js"></script>
+  <script src="./assets/js/main.js" defer></script>
 </body>
 </html>
